# server_backend

./: .gitignore  Cargo.toml
assets/: alarm.json  dbtable.json
src/: alarmdata.rs  lotdata.rs  main.rs  operating_data.rs  variants.rs
src/components/: jp_alm_ac2_utf8.txt  jp_alm_dc1.txt  jp_alm_dc1_utf8.txt  jp_alm_dc2.txt  jp_alm_ip.txt  jp_alm_ip_utf8.txt  jp_alm_ld.txt  jp_alm_ld_utf8.txt  jp_alm_uld.txt  jp_alm_uld_utf8.txt
src/graph/: alarm_plotdata.rs  graphdata.rs  mod.rs  plotdata.rs  sql.rs  variants.rs
