[package]
name = "server_backend"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4"
actix-cors = "0.7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite= {version="0.37",features= ["bundled"] }
indexmap = { version = "2.0", features = ["serde"] }
once_cell="1"